create post and renders them with profile picture

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,11 @@
     background-color: black;
     color: white;
   }
+  #__next {
+    display: grid;
+    min-height: 100vh;
+    grid-template-rows: min-content 1fr min-content;
+  }
 }
 
 @layer utilities {
