--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,4 +24,18 @@
 }
 
 @layer utilities {
+  .animate-scaleIn {
+    animation: scaleIn 500ms ease-in-out;
+  }
+
+  @keyframes scaleIn {
+    0% {
+      opacity: 0;
+      transform: scaleY(0);
+    }
+    100% {
+      opacity: 1;
+      transform: scaleY(1);
+    }
+  }
 }
